--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,12 @@
         android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ChooseActivity"></activity>
+        <activity android:name=".PhoneAuthActivity">
+        </activity>
+        <activity android:name=".ChooseActivity" />
         <activity
             android:name=".StartActivity"
-            android:theme="@style/AppThemeStart"></activity>
+            android:theme="@style/AppThemeStart" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
