--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.smoketrees.smokingrentals">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/icon"
@@ -9,18 +13,24 @@
         android:roundIcon="@mipmap/icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".PhoneAuthActivity">
-        </activity>
-        <activity android:name=".ChooseActivity" />
-        <activity
-            android:name=".StartActivity"
-            android:theme="@style/AppThemeStart" />
-        <activity android:name=".MainActivity">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="@string/map_key"/>
+
+        <activity android:name=".VehicleActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".PhoneAuthActivity"></activity>
+        <activity android:name=".ChooseActivity" />
+        <activity
+            android:name=".StartActivity"
+            android:theme="@style/AppThemeStart" />
+        <activity android:name=".MainActivity">
+
         </activity>
 
         <meta-data
